compile_error.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:generateDebugBuildConfig UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:processDebugGoogleServices UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
D:\usher\Documents\Ashcol Android\app\src\main\java\app\hub\user\UserProfileFragment.java:68: error: cannot find symbol
    private FirebaseAuthManager authManager;
            ^
  symbol:   class FirebaseAuthManager
  location: class UserProfileFragment
1 error

[Incubating] Problems report is available at: file:///D:/usher/Documents/Ashcol%20Android/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

19 actionable tasks: 1 executed, 18 up-to-date
* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  D:\usher\Documents\Ashcol Android\app\src\main\java\app\hub\user\UserProfileFragment.java:68: error: cannot find symbol
      private FirebaseAuthManager authManager;
              ^
    symbol:   class FirebaseAuthManager
    location: class UserProfileFragment
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 3s
